# lilybot

./: LICENSE  README.md
lily_bot/: CMakeLists.txt  package.xml
lily_bot/config/: params.yaml
lily_bot/launch/: lily_go.launch  lily_nav.launch  lily_slam.launch
lily_bot/maps/: map.pgm
lily_bot/meshes/: base_1.STL  base_2.STL  base_3.STL  battery.STL  camera.STL  camera_holder.STL  castor.STL  holder_b1.STL  holder_b2.STL  holder_b3.STL  holder_b4.STL  holder_t1.STL  holder_t2.STL  holder_t3.STL  motor_holder_l.STL  motor_holder_r.STL  motor_l.STL  motor_r.STL  wheel_l.STL  wheel_r.STL
lily_bot/rviz/: lily.rviz  nav.rviz  slam.rviz
lily_bot/urdf/: d435i.gazebo_mod.xacro  inertial_macros.xacro  lily_bot.gazebo.xacro  lily_bot.urdf.xacro
lily_bot/worlds/: plaza.world
