<?xml version="1.0"?>
<package format="2">
  <name>lily_bot</name>
  <version>1.0.0</version>
  
  <description>
  LilyBot is an autonomous 2-wheel differential drive robot powered by a Jetson Nano B01 running ROS Noetic on Ubuntu 20.04. Equipped with an Intel RealSense D435i depth camera, YDLIDAR X4 2D Lidar, and a Yahboom ROS Robot Expansion Board, it is capable of performing indoor AI-based tasks such as Active SLAM, Smart Navigation, and End-to-End Navigation. This package includes a high-fidelity digital twin with accurately modeled masses and inertias, enabling simulation and training with behavior closely matching the real robot.
  </description>
  
  <license>Apache 2.0</license>

  <maintainer email="alinhasan33@gmail.com">Ali Hasan</maintainer>

  <author email="alinhasan33@gmail.com">Ali Hasan</author>
  <author email="moallabashar107@gmail.com">Bashar Moalla</author>
  <author email="yousefmahfoud44@gmail.com">Yousef Mahfoud</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
